--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to Ehrgeiz's Blog!</h1>
-        <small>文韬与晶哥儿的人机交互学习内容</small>
+        <h1><b>Human Computer Interaction</b></h1>
+        <small>何文韬、刘晶、吴静容</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
